force-app/main/default/objects/WellbeingScore__c/WellbeingScore__c.object-meta.xml
<CustomObject>
    <description>Stores the calculated burnout score and risk level for each employee assessment. Internal only — employees never see this.</description>
    <label>Wellbeing Score</label>
    <nameField>
        <displayFormat>WS-{0000}</displayFormat>
        <label>Score ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wellbeing Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>