force-app/main/default/objects/WellbeingScore__c/fields/Employee_Activity__c.field-meta.xml
<CustomField>
    <fullName>Employee_Activity__c</fullName>
    <description>Link to the EmployeeActivity record that was assessed.</description>
    <label>Employee Activity</label>
    <referenceTo>EmployeeActivity__c</referenceTo>
    <relationshipLabel>Wellbeing Scores</relationshipLabel>
    <relationshipName>Wellbeing_Scores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>