force-app/main/default/objects/WellbeingScore__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Calculated burnout score (0-100). Higher = more risk.</description>
    <label>Score</label>
    <precision>5</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>